removed unused dependencies and added login and register

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,12 +1,9 @@
-<div class="my-auto mx-auto min-h-screen bg-blue-500/50">
+<div class="my-auto mx-auto min-h-screen">
   <div class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
-      <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
-        <h1 class="title-font font-medium text-3xl text-gray-900">Trade today</h1>
-        <p class="leading-relaxed mt-4">Become a millionaire by trading stocks.</p>
-      </div>
+      <%= render 'shared/side_message_panel' %>
       <div class="lg:w-2/6 md:w-1/2 bg-gray-100 rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0">
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= form_for(resource, url: user_registration_path(resource)) do |f| %>
           <%= render "users/shared/error_messages", resource: resource %>
           <h2 class="text-gray-900 text-lg font-medium title-font mb-5">Register</h2>
           <div class="relative mb-4">
@@ -24,18 +21,19 @@
           <div class="relative mb-4">
             <label for="password" class="leading-7 text-sm text-gray-600">Password</label>
             <% if @minimum_password_length %>
-               <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
             <% end %>
             <input type="password" id="password" required name="user[password]" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
           </div>
           <div class="relative mb-4">
             <label for="password-confirmation" class="leading-7 text-sm text-gray-600">Password Confirmation</label>
-            <input type="password-confirmation" id="password-confirmation" required name="user[password_confirmation]" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+            <input type="password" id="password-confirmation" required name="user[password_confirmation]" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
           </div>
-          <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Login</button>
+          <button type="submit" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Submit</button>
         <% end %>
         <%= render "users/shared/links" %>
       </div>
     </div>
   </div>
 </div>
+<%= console %>
