--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <%= vite_client_tag %>
-    <%= vite_javascript_tag 'application' %>
+    <%= javascript_pack_tag 'application' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <!--
       If using a TypeScript entrypoint file:
         vite_typescript_tag 'application'
@@ -17,7 +17,8 @@
 
       Visit the guide for more information: https://vite-ruby.netlify.app/guide/rails
     -->
-  </head>
+  <%= stylesheet_pack_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+</head>
   <body>
     <%= yield %>
   </body>
