--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -45,6 +45,12 @@
           <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-200">
             <div class="container mx-auto px-6 py-8">
               <h3 class="text-gray-700 text-3xl font-medium"></h3>
+              <% if alert.present? %>
+              <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                <strong class="font-bold"><%= alert %></strong>
+              </div>
+              <% end %>
+
               <%= yield %>
             </div>
           </main>
