added trade_filter specs

--- a/app/views/shared/_side_home.html.erb
+++ b/app/views/shared/_side_home.html.erb
@@ -35,7 +35,7 @@
     <span class="mx-3">Bank Accounts</span>
   </a>
   <a class="flex items-center mt-4 py-2 px-6 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100"
-                    href="#">
+                    href="<%= trades_path %>">
     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
