--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -59,7 +59,7 @@
                 <%= trade.state %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 font-medium">
-                <a href="#" class="text-indigo-600 hover:text-indigo-900">Show More</a>
+                <a href="<%= trade_path(trade) %>" class="text-indigo-600 hover:text-indigo-900">Show More</a>
               </td>
             </tr>
           <% end %>
