--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -60,6 +60,9 @@
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 font-medium">
                 <a href="<%= trade_path(trade) %>" class="text-indigo-600 hover:text-indigo-900">Show More</a>
+                <% if trade.pending? %>
+                <a href="<%= edit_trade_path(trade) %>" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                <% end %>
               </td>
             </tr>
           <% end %>
