added counter cache for done trades

--- a/app/views/bank_accounts/index.html.erb
+++ b/app/views/bank_accounts/index.html.erb
@@ -38,7 +38,7 @@
                 <%= bank_account.amount %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap border-b border-gray-200">
-                <%= bank_account.trades.done.count %>
+                <%= bank_account.trades_done_count %>
               </td>
               <td class="px-6 py-4 whitespace-no-wrap text-right border-b border-gray-200 text-sm leading-5 font-medium">
                 <a href="<%= bank_account_path(bank_account) %>" class="text-indigo-600 hover:text-indigo-900">Show More</a>
